Add HttpSecurity, filters, to generate and consume JWT tokens.

--- a/application.yml
+++ b/application.yml
@@ -11,4 +11,4 @@ logging:
   level:
     org.springframework.web: INFO
     com.example.demo: DEBUG
-    jv.proto.springboot.helper: WARN
+    com.example.helper: WARN
